# fast-float-rust

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml
benches/: bench.rs
extras/data-tests/: Cargo.toml  README.md
extras/data-tests/src/: main.rs
extras/simple-bench/: Cargo.toml  README.md
extras/simple-bench/src/: main.rs  random.rs
fuzz/: Cargo.toml  float.dict
fuzz/fuzz_targets/: fast_float.rs  roundtrip_f64.rs
src/: binary.rs  common.rs  decimal.rs  float.rs  format.rs  lib.rs  number.rs  parse.rs  simple.rs  table.rs
tests/: test_api.rs  test_basic.rs  test_exhaustive.rs  test_json.rs  test_random.rs
