[package]
name = "fast-float"
version = "0.1.0"
authors = ["Ivan Smirnov <i.s.smirnov@gmail.com>"]
edition = "2018"

[dev-dependencies]
lexical-core = "0.7"
criterion = "0.3"

[dev-dependencies.hexf]
version = "*"
git = "https://github.com/lifthrasiir/hexf.git" # until the version on crates.io is updated
rev = "0c95001574997847e1348c4f6dac5f434c772914"

[[bench]]
name = "bench"
harness = false

[lib]
name = "fast_float"
path = "src/lib.rs"
bench = false

[workspace]
members = [".", "extras/data-tests", "extras/simple-bench"]

[profile.release]
lto = "fat"
codegen-units = 1
