[package]
name = "fast-float-simple-bench"
version = "0.1.0"
authors = ["Ivan Smirnov <i.s.smirnov@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
fast-float = { path = "../.." }
structopt = "0.3"
anyhow = "1.0"
lexical = "5.2"
lexical-core = "0.7"
fastrand = "1.4"
